--- a/wisdompets/adoptions/templates/home.html
+++ b/wisdompets/adoptions/templates/home.html
@@ -1,1 +1,8 @@
-home
+<div>
+  {% for pet in pets %}
+    <div class='petname'>
+      <a href='{% url 'pet_detail'}'>
+      <h3>{{ pet.name|capfirst }}</h3>
+      </a>
+    </div>
+  {% endfor %}
