--- a/wisdompets/adoptions/templates/home.html
+++ b/wisdompets/adoptions/templates/home.html
@@ -1,8 +1,10 @@
 <div>
   {% for pet in pets %}
     <div class='petname'>
-      <a href='{% url 'pet_detail'}'>
+      <a href='{% url 'pet_detail' pet.id %}'>
       <h3>{{ pet.name|capfirst }}</h3>
       </a>
+      <p>{{ pet.species }}</p>
+      <p>{{ pet.breed }}</p>
     </div>
   {% endfor %}
