--- a/wisdompets/adoptions/templates/home.html
+++ b/wisdompets/adoptions/templates/home.html
@@ -5,6 +5,8 @@
       <h3>{{ pet.name|capfirst }}</h3>
       </a>
       <p>{{ pet.species }}</p>
-      <p>{{ pet.breed }}</p>
+      {% if pet.breed %}
+      <p>Breed: {{ pet.breed }}</p>
+      {% endif %}
     </div>
   {% endfor %}
