--- a/wisdompets/adoptions/templates/home.html
+++ b/wisdompets/adoptions/templates/home.html
@@ -8,5 +8,6 @@
       {% if pet.breed %}
       <p>Breed: {{ pet.breed }}</p>
       {% endif %}
+      <p class='hidden'>{{ pet.descrption }}</p>
     </div>
   {% endfor %}
