--- a/wisdompets/adoptions/templates/home.html
+++ b/wisdompets/adoptions/templates/home.html
@@ -8,7 +8,7 @@
       {% if pet.breed %}
       <p>Breed: {{ pet.breed }}</p>
       {% endif %}
-      <p class="hidden">{{ pet.descrption }}</p>
+      <p class="hidden">{{ pet.description }}</p>
     </div>
   {% endfor %}
 </div>
