--- a/wisdompets/adoptions/templates/Pet_detail.html
+++ b/wisdompets/adoptions/templates/Pet_detail.html
@@ -4,4 +4,10 @@
   {% if pet.breed %}
     <p>Breed: {{ pet.breed }}</p>
   {% endif %}
+  {% if pet.age %}
+    <p>Age: {{ pet.age }}</p>
+  {% endif %}
+  {% if pet.sex %}
+    <p>Sex: {{ pet.sex }}</p>
+  {% endif %}
 </div>
