--- a/wisdompets/adoptions/templates/Pet_detail.html
+++ b/wisdompets/adoptions/templates/Pet_detail.html
@@ -10,4 +10,14 @@
   {% if pet.sex %}
     <p>Sex: {{ pet.sex }}</p>
   {% endif %}
+  {% if pet.vaccinations.all %}
+    <p>vaccinations for:</p>
+    <ul>
+      {% for vaccinations in pet.vaccinations.all %}
+        <li>{{ vaccinations.name }}</li>
+      {% endfor %}
+    </ul>
+  {% endfor %}
+  <p>Submitted by: {{ pet.submitter }}</p>
+  <p>Submitted on: {{ pet.submission_date|date }}</p>
 </div>
