--- a/wisdompets/adoptions/templates/Pet_detail.html
+++ b/wisdompets/adoptions/templates/Pet_detail.html
@@ -20,4 +20,5 @@
   {% endif %}
   <p>Submitted by: {{ pet.submitter }}</p>
   <p>Submitted on: {{ pet.submission_date|date:'M D Y' }}</p>
+  <p>{{ pet.description }}</p>
 </div>
