--- a/wisdompets/adoptions/templates/Pet_detail.html
+++ b/wisdompets/adoptions/templates/Pet_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block  %}
 <div>
   <h3>{{ pet.petname|capfirst }}</h3>
   <p>{{ pet.species }}</p>
@@ -23,3 +24,4 @@
   <p>Submitted on: {{ pet.submission_date|date:'M D Y' }}</p>
   <p>{{ pet.description }}</p>
 </div>
+{% endblock %}
