--- a/wisdompets/adoptions/templates/base.html
+++ b/wisdompets/adoptions/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
@@ -11,7 +12,7 @@
                     <div class="main-head-wrap inner-wrap clearfix">
                         <div id="header-logo-image">
                             <a href="/">
-                                <img src="wisdom-pet-logo-single.png" alt="Wisdom Pet Medicine">
+                                <img src={% static "wisdom-pet-logo-single.png"%} alt="Wisdom Pet Medicine">
                             </a>
                         </div>
                         <div id="header-text" class="">
