--- a/wisdompets/adoptions/templates/base.html
+++ b/wisdompets/adoptions/templates/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Home - Wisdom Pet Medicine</title>
-        <link rel="stylesheet" id="ample-style-css" href="style.css" type="text/css" media="all">
+        <link rel="stylesheet" id="ample-style-css" href="http://wisdompets.com/wp-content/themes/ample/style.css?ver=4.8.3" type="text/css" media="all">
     </head>
     <body class="wide">
         <div id="page" class="hfeed site">
@@ -12,7 +12,7 @@
                     <div class="main-head-wrap inner-wrap clearfix">
                         <div id="header-logo-image">
                             <a href="/">
-                                <img src={% static "wisdom-pet-logo-single.png"%} alt="Wisdom Pet Medicine">
+                                <img src="http://wisdompets.com/wp-content/uploads/2015/10/wisdom-pet-logo-single.png" alt="Wisdom Pet Medicine">
                             </a>
                         </div>
                         <div id="header-text" class="">
