--- a/wisdompets/adoptions/templates/base.html
+++ b/wisdompets/adoptions/templates/base.html
@@ -22,7 +22,7 @@
                             <p>We treat your pets like we treat our own.</p>
                         </div>
                     </div>
-                    <img src="/static/1500x400-header_114150655.jpg" alt="Wisdom Pet Medicine">
+                    <img src="http://wisdompets.com/wp-content/uploads/2015/10/1500x400-header_114150655.jpg" alt="Wisdom Pet Medicine">
                 </div>
             </header>
             <div class="main-wrapper">
