--- a/wisdompets/adoptions/templates/Pet_detail.html
+++ b/wisdompets/adoptions/templates/Pet_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block  %}
+{% block content %}
 <div>
   <h3>{{ pet.petname|capfirst }}</h3>
   <p>{{ pet.species }}</p>
