--- a/wisdompets/adoptions/templates/base.html
+++ b/wisdompets/adoptions/templates/base.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Home - Wisdom Pet Medicine</title>
         <!-- <link rel="stylesheet" id="ample-style-css" href="http://wisdompets.com/wp-content/themes/ample/style.css?ver=4.8.3" type="text/css" media="all"> -->
-        <link rel="stylesheet" id="ample-style-css" href="/static/style.css?ver=4.8.3" type="text/css" media="all">
+        <link rel="stylesheet" id="ample-style-css" href="{% static 'style.css' %}" type="text/css" media="all">
     </head>
     <body class="wide">
         <div id="page" class="hfeed site">
