--- a/wisdompets/adoptions/templates/base.html
+++ b/wisdompets/adoptions/templates/base.html
@@ -13,7 +13,7 @@
                     <div class="main-head-wrap inner-wrap clearfix">
                         <div id="header-logo-image">
                             <a href="/">
-                                <img src="http://wisdompets.com/wp-content/uploads/2015/10/wisdom-pet-logo-single.png" alt="Wisdom Pet Medicine">
+                                <img src="{% static 'wisdom-pet-logo-single.png' %}" alt="Wisdom Pet Medicine">
                             </a>
                         </div>
                         <div id="header-text" class="">
@@ -23,7 +23,8 @@
                             <p>We treat your pets like we treat our own.</p>
                         </div>
                     </div>
-                    <img src="http://wisdompets.com/wp-content/uploads/2015/10/1500x400-header_114150655.jpg" alt="Wisdom Pet Medicine">
+                    <!-- <img src="http://wisdompets.com/wp-content/uploads/2015/10/1500x400-header_114150655.jpg" alt="Wisdom Pet Medicine"> -->
+                    <img src="{% static '1500x400-header_114150655.jpg' %}" alt="Wisdom Pet Medicine">
                 </div>
             </header>
             <div class="main-wrapper">
