--- a/wisdompets/adoptions/templates/base.html
+++ b/wisdompets/adoptions/templates/base.html
@@ -45,5 +45,7 @@
                 </div>
             </footer>
         </div>
+      <<script src="{% static 'main.js' %}">
+      </script>
     </body>
 </html>
