--- a/wisdompets/adoptions/templates/base.html
+++ b/wisdompets/adoptions/templates/base.html
@@ -45,7 +45,6 @@
                 </div>
             </footer>
         </div>
-      <<script src="{% static 'main.js' %}">
-      </script>
+      <script src="{% static 'main.js' %}"></script>
     </body>
 </html>
